# manta_dev_gh

./: .gitignore  README.md  github_connector.py  main.py  pyproject.toml  settings.py
